# python-cslrtools2

./: .coverage  .gitignore  BRANCHING_STRATEGY.md  CHANGELOG.md  DATA_AUGUMENTATION.md  DOCKER_STRATEGY.md  DOCSTRING_ENHANCEMENT_SUMMARY.md  Dockerfile.cpu  Dockerfile.cu126  Dockerfile.cu130  Dockerfile.torch23  EXCEPTION_LOGGING_TODO.md  INTEGRATION_LOG.md  INTEGRATION_TEST_TASKS.md  LIBRARY_CHECKLIST.md  LICENSE  LMPIPE_FRAMEWORK_CLASSIFICATION.md  MEDIAPIPE_CONNECTIONS_IMPLEMENTATION.md  MEDIAPIPE_CONNECTIONS_REPORT.md  MEDIAPIPE_CONSTANTS_INTEGRATION.md  NEXT_ACTIONS.md  README.md  STYLE_VIOLATIONS.md  TYPE_STUB_VERIFICATION.md  WORKSPACE_SETUP.md  add_license_headers.py  connections_analysis.txt  coverage.json  coverage_all.txt  coverage_array_loader.txt  coverage_collector_base.txt  coverage_convsize.txt  coverage_estimator.txt  coverage_runspec.txt  coverage_utils.txt  csv_test_result.txt  dataset_stat1.md  docker-compose.yaml  evaluate_real_dataset.py  evaluate_real_dataset_v2.py  (+12 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: AGENT_INSTRUCTIONS.md  copilot-instructions.md  worktree-copilot-instructions.md
.github/workflows/: ci.yml
.work/: WIP_GUIDE.md  status.json
docker/: test-torch-version.sh
docs/: CALCULATOR_ARCHITECTURE.md  METRICS_CALCULATOR_DESIGN.md  METRICS_PLUGIN_STRATEGY.md  METRICS_PROTOTYPE2_ARCHITECTURE.md  METRICS_REFACTORED_ARCHITECTURE.md  METRIC_CLASS_ARCHITECTURE.md  README.md  SLDATASET_INTEGRATION_GAPS.md  _config.yml  index.md  installation.md  nan_rate_threshold_research.md
docs/api/: convsize.md  index.md  lmpipe.md
docs/examples/: index.md
guides/: BRANCHING_STRATEGY.md  CODING_STYLE_GUIDE.md  DATA_AUGUMENTATION.md  DEPENDENCY_WATCH.md  DOCSTRING_STYLE_GUIDE.md  EXCEPTION_LOGGING_STYLE_GUIDE.md  INTEGRATION_TEST_STRATEGY.md  LIBRARY_CHECKLIST.md  LMPIPE_FRAMEWORK_CLASSIFICATION.md  PYRIGHT_STYLE_GUIDE.md  TEST-RESOURCES-GUIDE.md  add_license_header.py  github-issue-torchvision==0.24.1-markdown.md  lib-requirements.md
metrics_prototype/: README.md  __init__.py  base.py  demo.py  loader.py
metrics_prototype/plugins/: __init__.py  anatomical.py  completeness.py  temporal.py
metrics_prototype2/: README.md  __init__.py  base.py  demo.py  loader.py  utils.py
metrics_prototype2/plugins/: __init__.py  anatomical.py  completeness.py  temporal.py
sphinx/: README.md
sphinx/source/: conf.py  cslrtools2.plugins.rst  cslrtools2.sldataset.rst  index.rst  modules.rst
src/cslrtools2/: __init__.py  __init__.py.bak  _root.py  _version.py  convsize.py  exceptions.py  logger.py
src/cslrtools2/lmpipe/: __init__.py  estimator.py  logger.py  options.py  options.py.parser  options.py.template  runspec.py  typings.py  utils.py
src/cslrtools2/lmpipe/app/: args.py  cli.py  mp_rich.py  plugins.py  runner.py
src/cslrtools2/lmpipe/app/holistic/: estimator.py  roi.py
src/cslrtools2/lmpipe/collector/: __init__.py  base.py
src/cslrtools2/lmpipe/collector/annotated_frames/: __init__.py  base.py  cv2_af.py  matplotlib_af.py  pil_af.py  torchvision_af.py
src/cslrtools2/lmpipe/collector/landmark_matrix/: __init__.py  base.py  csv_lmsc.py  json_lmsc.py  (+5 more)
src/cslrtools2/lmpipe/interface/: __init__.py  executor.py  runner.py
src/cslrtools2/plugins/: __init__.py
src/cslrtools2/sldataset/: __init__.py  array_loader.py  dataset.py  logger.py  typings.py  utils.py
src/cslrtools2/sldataset/app/: args.py  cli.py  plugins.py
src/cslrtools2/sldataset/dataset/: __init__.py  core.py  holder.py  item.py  transform.py
src/cslrtools2/sldataset/metrics/: aggregator.py  args.py  calculator.py  metric.py  plugin_util.py  schema.py  stat.py
src/cslrtools2/sldataset/transform/: core.py  dynamic.py  frozen.py
src/cslrtools2/typings/: __init__.py
src/python_cslrtools2/: convsize.py
src/python_cslrtools2/lmpipe/: estimator.py  executor.py  interface.py  options.py  options.py.parser  options.py.template  runspec.py  typings.py  utils.py
src/python_cslrtools2/lmpipe/app/: args.py  cli.py  mp_rich.py  plugins.py  runner.py
src/python_cslrtools2/lmpipe/collector/: __init__.py
src/python_cslrtools2/lmpipe/interface/: __init__.py  executor.py
tests/: README.md  __init__.py  conftest.py  test_mediapipe_constants.py
tests/benchmark/: __init__.py  conftest.py  test_performance.py
tests/data/: SOURCES.md
tests/import/: __init__.py  test_imports.py  test_mediapipe_constants.py
tests/integration/: README.md  __init__.py  conftest.py  helpers.py  test_cli_commands.py  test_collector_formats.py  test_dataset_workflow.py  test_lmpipe_e2e_basic.py  test_lmpipe_multiple_collectors.py  test_lmpipe_runner_edge_cases.py  test_plugin_system.py  test_transform_dynamic.py
tests/resource/: README.md  __init__.py  config.py  download_github.py  download_pexels.py  download_zenodo.py  setup_resources.py
tests/src/: __init__.py  test_convsize.py  test_import.py
tests/src/lmpipe/: __init__.py  test_estimator.py
tests/src/plugins/: __init__.py
tests/src/sldataset/: __init__.py  test_dataset.py
tests/unit/: __init__.py  test_convsize.py  test_error_handling.py  test_init.py  test_init_fallback.py  test_logger.py  test_root.py
tests/unit/lmpipe/: __init__.py  test_concurrent.py  test_estimator.py  test_options.py  test_runspec.py  test_utils.py
tests/unit/lmpipe/collector/: __init__.py  test_base.py  test_csv_lmsc.py  test_csv_lmsc_edge_cases.py  test_json_lmsc.py  test_npy_lmsc.py  test_npz_lmsc.py  test_safetensors_lmsc.py  test_torch_lmsc.py  test_zarr_lmsc.py
tests/unit/lmpipe/interface/: __init__.py  test_executor.py  test_lmpipe_interface.py  test_runner.py
tests/unit/sldataset/: __init__.py  test_array_loader.py  test_dataset.py  test_dataset_core.py  test_dataset_holder.py  test_dataset_item.py  test_utils.py
tests/unit/sldataset/transform/: __init__.py  test_dynamic.py
typings/: mediapipe.pyi
typings/api/: synchronous.pyi
typings/matplotlib/: pyplot.pyi
typings/mediapipe/: __init__.pyi
typings/safetensors/: __init__.pyi  numpy.pyi  torch.pyi
typings/zarr/: __init__.pyi
typings/zarr/api/: synchronous.pyi
(+44 files in other folders)
