[project]
name = "cslrtools2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clipar",
    "loky>=3.5.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "safetensors>=0.6.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "types-requests>=2.32.4.20250913",
    "zarr>=3.1.3",
]

[project.scripts]
lmpipe = "cslrtools2.lmpipe.app.cli:main"
sldataset2 = "cslrtools2.sldataset.app.cli:main"

[project.entry-points."cslrtools2.lmpipe.plugins"]
"mediapipe.pose" = "cslrtools2.plugins.mediapipe.lmpipe.pose_args:pose_info"
"mediapipe.both_hands" = "cslrtools2.plugins.mediapipe.lmpipe.hand_args:both_hands_info"
"mediapipe.left_hand" = "cslrtools2.plugins.mediapipe.lmpipe.hand_args:left_hand_info"
"mediapipe.right_hand" = "cslrtools2.plugins.mediapipe.lmpipe.hand_args:right_hand_info"
"mediapipe.face" = "cslrtools2.plugins.mediapipe.lmpipe.face_args:face_info"
"mediapipe.holistic" = "cslrtools2.plugins.mediapipe.lmpipe.holistic_args:holistic_info"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
clipar = { git = "https://github.com/plumiume/python-clipar.git" }

[dependency-groups]
mediapipe = [
    "mediapipe>=0.10.14",
]

