[project]
name = "cslrtools2"
dynamic = ["version"]
description = "Comprehensive toolkit for Continuous Sign Language Recognition research with landmark extraction and dataset utilities"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Apache-2.0" }
authors = [
    { name = "plumiume", email = "plumiume@gmail.com" }
]
keywords = ["sign-language", "landmark-detection", "mediapipe", "cslr", "pytorch", "continuous-sign-language-recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]
urls = { "Repository" = "https://github.com/ikegami-yukino/python-cslrtools2" }
dependencies = [
    "clipar @ https://github.com/plumiume/python-clipar.git",
    "loky>=3.0.0",
    "matplotlib>=3.5.0",
    "numpy>=2.0.0",
    "opencv-python>=4.5.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "safetensors>=0.3.0",
    "scipy>=1.16.3",
    "torch>=2.0.0",
    "torchvision>=0.15.0,!=0.24.1",
    "zarr>=3.0.0",
]

[project.scripts]
lmpipe = "cslrtools2.lmpipe.app.cli:main"
sldataset2 = "cslrtools2.sldataset.app.cli:main"

[project.entry-points."cslrtools2.lmpipe.plugins"]
"mediapipe.pose" = "cslrtools2.plugins.mediapipe.lmpipe.pose_args:pose_info"
"mediapipe.both_hands" = "cslrtools2.plugins.mediapipe.lmpipe.hand_args:both_hands_info"
"mediapipe.left_hand" = "cslrtools2.plugins.mediapipe.lmpipe.hand_args:left_hand_info"
"mediapipe.right_hand" = "cslrtools2.plugins.mediapipe.lmpipe.hand_args:right_hand_info"
"mediapipe.face" = "cslrtools2.plugins.mediapipe.lmpipe.face_args:face_info"
"mediapipe.holistic" = "cslrtools2.plugins.mediapipe.lmpipe.holistic_args:holistic_info"

[project.entry-points."cslrtools2.sldataset.plugins"]
"fs50" = "cslrtools2.plugins.fluentsigners50.sldataset:info"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/cslrtools2/_version.py"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
clipar = { git = "https://github.com/plumiume/python-clipar.git" }
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "hatchling>=1.18.0",
    "hatch-vcs>=0.3.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "types-requests>=2.28.0",
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "pyright>=1.1.407",
    "ruff>=0.14.5",
    "pylance>=0.39.0",
]
mediapipe = [
    "mediapipe>=0.10.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Note: -n auto disabled due to torch/Triton TORCH_LIBRARY conflicts
# Use: pytest -n auto --dist=loadscope for non-torch tests
addopts = ""
markers = [
    "mediapipe: tests that require MediaPipe to be installed",
    "integration: integration tests that test multiple components together",
    "requires_video: tests that require actual video files to be present",
    "slow: tests that take a long time to run (> 5 seconds)",
    "torch: tests that use PyTorch (incompatible with pytest-xdist)",
]
